--- a/about.html
+++ b/about.html
@@ -1,25 +1,47 @@
+<!-- about.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>About Chris</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>About Christopher Pavlopoulos</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>About Christopher Pavlopoulos</h1>
-    <h2>Life Story</h2>
 
-    <div>
-        <h3>Bio</h3>
-        <p>Christopher Pavlopoulos grew up in a small town in Lemont, Illinois...</p>
-        <p>He played football in high school, later pursued Computer Science...</p>
-        <p>He enrolled at Iowa State University, joined Kappa Sigma, met Melissa, and got married...</p>
-        <p>After working at Intuit in California, he moved back to Illinois for a job at Google...</p>
-        <p>He’s now building a family and recently traveled to Japan for his honeymoon...</p>
+  <!-- Header organism -->
+  <header class="site-header">
+    <div class="container">
+      <h1 class="logo"><a href="index.html">Chris’s bioSite</a></h1>
+      <nav class="site-nav">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="hobbies.html">Hobbies</a></li>
+        </ul>
+      </nav>
     </div>
+  </header>
 
-    <div>
-        <a href="index.html">← Back to Home</a>
+  <!-- Main organism -->
+  <main class="site-main">
+    <div class="container">
+      <h2>Life Story</h2>
+      <p>Christopher grew up in Lemont, IL, played high‑school football, then studied Computer Science at Iowa State University where he joined Kappa Sigma and met his wife, Melissa.</p>
+      <p>He’s worked at Intuit in California and now develops software at Google back in Illinois. Recently, he and Melissa honeymooned in Japan.</p>
+
+      <figure class="image-with-caption">
+        <img src="images/japan.jpg" alt="Chris and Melissa in Kyoto">
+        <figcaption>Honeymoon in Kyoto, Japan (April 2024)</figcaption>
+      </figure>
     </div>
+  </main>
+
+  <!-- Footer organism -->
+  <footer class="site-footer">
+    <div class="container">
+      <p>© 2025 Christopher Pavlopoulos. All rights reserved.</p>
+    </div>
+  </footer>
+
 </body>
 </html>
