--- a/index.html
+++ b/index.html
@@ -1,20 +1,46 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Chris's bioSite</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>Chris’s bioSite</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Welcome to Chris's Website</h1>
-    <h2>Explore more about Christopher Pavlopoulos</h2>
 
-    <div>
-        <h3>Pages</h3>
+  <!-- Header organism -->
+  <header class="site-header">
+    <div class="container">
+      <h1 class="logo"><a href="index.html">Chris’s bioSite</a></h1>
+      <nav class="site-nav">
         <ul>
-            <li><a href="about.html">About Chris</a></li>
-            <li><a href="hobbies.html">Hobbies & Q&A</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="hobbies.html">Hobbies</a></li>
         </ul>
+      </nav>
     </div>
+  </header>
+
+  <!-- Main organism -->
+  <main class="site-main">
+    <div class="container">
+      <h2>Welcome!</h2>
+      <p>Hi, I’m Christopher Pavlopoulos. Dive in to learn about my journey, interests, and projects.</p>
+
+      <figure class="image-with-caption">
+        <img src="images/profile.jpg" alt="Chris’s Profile Photo">
+        <figcaption>Chris in Lemont, IL (Summer 2024)</figcaption>
+      </figure>
+    </div>
+  </main>
+
+  <!-- Footer organism -->
+  <footer class="site-footer">
+    <div class="container">
+      <p>© 2025 Christopher Pavlopoulos. All rights reserved.</p>
+    </div>
+  </footer>
+
 </body>
 </html>
